# lhs2tex

./: .cvsignore  .gitignore  .out  .script  .travis.yml  AUTHORS  Auxiliaries.lhs  BUGS  CHANGELOG  CHANGELOG.md  Directives.lhs  Document.lhs  FileNameUtils.lhs  FiniteMap.lhs  HsLexer.lhs  INSTALL  INSTALL0  INSTALL1  LICENSE  LaTeX.lhs  Lhs2TeX.lhs  Main.lhs  Makefile  Makefile.in  Makefile.lit  Math.lhs  MathCommon.lhs  MathPoly.lhs  NewCode.lhs  Parser.lhs  RELEASE  Setup.hs  StateT.lhs  TODO  TeXCommands.lhs  TeXParser.lhs  Typewriter.lhs  Value.lhs  Verbatim.lhs  Version.lhs.in  (+26 more)
.github/workflows/: haskell-ci.yml
Examples/: FormatAlign.lhs  HelloWorld.lhs  MaxSegment.lhs  Unlit.lhs  UnlitP.lhs
ExtLibrary/: README
ExtLibrary/lineno/: lineno-demo.lhs  lineno.fmt
Guide/: Guide.lhs  Makefile  block.snip  directives2.snip  directives4.snip  sorts.math  sorts.snip  spec.math  spec.snip
Testsuite/: .out  .script  Makefile  Test.lhs  Try.lhs  braces.snip  comments.snip  errors.snip  format.snip  gap.snip  idents.snip  indentation.snip  meta.snip  operators.snip  parens.snip  spacing.snip  special.snip  try.tex
doc/: AGExample.lhs  AGExampleIn.lhs  Accidental.lhs  AccidentalC.lhs  AccidentalCIn.lhs  AccidentalIn.lhs  AlignColumnSyntax.lhs  CabalInstallation.lhs  CalcExample.lhs  CalcExampleIn.lhs  Card.lhs  CardIn.lhs  CompleteDirectives.lhs  Complex.lhs  ConfigureCall.lhs  Directives.lhs  FormatArrow.lhs  FormatArrow2.lhs  FormatElem.lhs  FormatGreekIn.lhs  FormatGreekOut.lhs  FormatId.lhs  FormatIdentifierExamples.lhs  FormatIdentifierRedefs.lhs  FormatIdentifierWrong.lhs  FormatRecurse.lhs  FormatStar.lhs  FormatSyntax.lhs  GHExample.lhs  GHExampleIn.lhs  GroupExample.lhs  GroupExampleIn.lhs  GroupSyntax.lhs  Guide2.lhs  HackageInstallation.lhs  HelloWorld.lhs  HelloWorldBirdInput.lhs  HelloWorldBirdSpecInput.lhs  HelloWorldCodeInput.lhs  HelloWorldDialogue.lhs  (+66 more)
olddoc/: Lhs2TeX.fmt  Lhs2TeX.lhs
polytable/: polytable.sty
src/: Auxiliaries.lhs  Directives.lhs  Document.lhs  FileNameUtils.lhs  FiniteMap.lhs  Format.lhs  HsLexer.lhs  Lhs2TeX.hs  License.lhs  Main.lhs  Math.lhs  MathCommon.lhs  MathPoly.lhs  NewCode.lhs  Options.lhs  Parser.lhs  State.lhs  StateT.lhs  TeXCommands.lhs  TeXParser.lhs  Typewriter.lhs  Value.lhs  Verbatim.lhs  Version.lhs.in
src/Lhs2TeX/: Directive.hs  Document.hs  Driver.hs  Eval.hs  Exception.hs  File.hs  Flags.hs  Formatting.hs  Help.hs  HsLexer.hs  Monad.hs  NewCode.hs  Options.hs  Representation.hs  SearchPath.hs  State.hs  Typewriter.hs  Utils.hs  Value.hs  Verbatim.hs  Version.hs
src/Lhs2TeX/Directive/: Format.hs  Let.hs  Subst.hs
src/Lhs2TeX/Math/: Classic.hs  Poly.hs
src/Lhs2TeX/TeX/: Parser.hs  Syntax.hs
