dnl
dnl Generic Haskell configure script
dnl

# Is it there?
AC_INIT(lhs2tex,1.5)

VERSION=1.5
NUMVERSION=105
AC_SUBST(VERSION)
AC_SUBST(NUMVERSION)

# check for Haskell compiler
AC_PATH_PROG(GHC,ghc)

# install command
AC_PROG_INSTALL

# symbolic links
AC_PROG_LN_S()

# other programs
AC_PATH_PROG(MV,mv)
AC_PATH_PROG(CP,cp)
AC_PATH_PROG(RM,rm)
AC_PATH_PROG(MKDIR,mkdir)
AC_PATH_PROG(TOUCH,touch)
AC_PATH_PROG(DIFF,diff)
AC_PATH_PROG(GREP,grep)
AC_PATH_PROG(SED,sed)
AC_PATH_PROG(SORT,sort)
AC_PATH_PROG(UNIQ,uniq)
AC_PATH_PROG(FIND,find)
AC_PATH_PROG(LATEX,latex)
AC_PATH_PROG(XDVI,xdvi)
AC_PATH_PROG(GV,gv)
AC_PATH_PROG(DVIPS,dvips)

AC_CONFIG_FILES(Makefile Version.lhs)
AC_OUTPUT

echo "Configuration succesfully completed."
echo "Say"
echo "     make               to just compile"
echo "     make install       to compile and install"

