cabal-version:  >=1.10
name:           lhs2tex
version:        1.19
license:        GPL
license-file:   LICENSE
author:         Ralf Hinze <ralf.hinze@comlab.ox.ac.uk>, Andres Loeh <lhs2tex@andres-loeh.de>
maintainer:     Andres Loeh <lhs2tex@andres-loeh.de>
stability:      stable
homepage:       http://www.andres-loeh.de/lhs2tex/
synopsis:       Preprocessor for typesetting Haskell sources with LaTeX
description:    Preprocessor for typesetting Haskell sources with LaTeX
category:       Development, Language
build-type:     Custom
extra-source-files:     AUTHORS
                        CHANGELOG
                        INSTALL
                        TODO
                        doc/*.lhs
                        doc/*.fmt
                        doc/Guide2.lhs
                        doc/Guide2.pdf
                        doc/Makefile
                        doc/lhs2TeXpre
                        Examples/*.lhs
                        Examples/lhs2TeXpre
                        Library/*.fmt
                        polytable/*.sty
                        polytable/*.pdf
                        src/Version.lhs.in
                        Testsuite/*.snip
                        Testsuite/*.lhs
                        Testsuite/Makefile
                        sorts.snip
                        id.snip
                        cata.snip
                        spec.snip
                        lhs2TeX.fmt.lit
                        lhs2TeX.sty.lit
                        lhs2TeX.1.in
                        Makefile
                        common.mk
                        config.mk.in
                        configure
                        mkinstalldirs
                        install-sh

executable lhs2TeX
  main-is:              Main.lhs
  hs-source-dirs:       src
  default-language:     Haskell98
  other-extensions:     ScopedTypeVariables
                        NPlusKPatterns
                        GeneralizedNewtypeDeriving
                        TypeSynonymInstances
  build-depends:        base >= 4.2 && < 5,
                        regex-compat,
                        mtl,
                        filepath,
                        directory,
                        process
  other-modules:        Auxiliaries
                        Directives
                        Document
                        FileNameUtils
                        FiniteMap
                        HsLexer
                        License
                        MathCommon
                        Math
                        MathPoly
                        NewCode
                        Parser
                        State
                        StateT
                        TeXCommands
                        TeXParser
                        Typewriter
                        Value
                        Verbatim
                        Version
